RESOLVED FIXED163798
Tighten ComputedStyleExtractor to use Element instead of Node
https://bugs.webkit.org/show_bug.cgi?id=163798
Summary Tighten ComputedStyleExtractor to use Element instead of Node
Antti Koivisto
Reported 2016-10-21 10:22:52 PDT
Only Elements have style.
Attachments
patch (30.83 KB, patch)
2016-10-21 10:51 PDT, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2016-10-21 10:51:44 PDT
Antti Koivisto
Comment 2 2016-10-21 11:47:37 PDT
Note You need to log in before you can comment on or make changes to this bug.